<resources>
    <string name="app_name">My Application</string>
    <string name="P_info">玩家信息</string>
    <string name="Bedwars">BedWars</string>
    <string name="Sky_wars">SkyWars</string>
    <string name="Murder_Mystery">MurderMystery</string>
    <string name="Duels">Duels</string>
    <string name="UHC">UHC</string>
    <string name="Goback">返回</string>
    <string name="Commit">提交</string>
    <string name="Select">选择</string>
    <string name="Reset_key">重置key</string>
    <string name="query">查询</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Minecraft_Name">Minecraft Name</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="bazaar">Bazaar(测试版)</string>
    <string name="ucanuup">你行你上</string>
</resources>